2003-08-26  David Gravereaux <davygrvy@pobox.com>

	* generic/tcl.h: Added some support for the LCC-Win32 compiler.
	Unfortunetly, this compiler has a bug in its preprocessor and
	can't build Tcl even with this minor patch.  Also added some
	support for the OpenWatcom compiler.  A new win/makefile.wc to
	follow soon.

2003-08-25  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tools/genStubs.tcl (genStubs::makeDecl): A more subtle way of
	generating stubbed declarations allows us to have declarations of
	a function in multiple interfaces simultaneously.

	* generic/tcl.decls: Duplicated some namespace declarations from
	tclInt.decls here, as mandated by TIP #139.  This is OK since the
	declarations match and will end up using the declarations in the
	public code from now on because of #include ordering.  Keeping the
	old declarations in tclInt.decls; there's no need to gratuitously
	break compatability for those extensions which are already clients
	of the namespace code.

2003-08-23  Zoran Vasiljevic  <zoran@archiwrae.com>

	* generic/tclIOUtil.c: merged fixes for thread-unsafe
	handling of filesystem records [Bug #753315]. 
	This also fixed the Bug #788780
	* generic/tclPathObj.c: merged fixes for thread-unsafe
	handling of filesystem records [Bug #753315]. 

	* generic/tclFileSystem.h: merged fixes for thread-unsafe
	handling of filesystem records [Bug #753315].

2003-08-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tclWinSerial.c (SerialErrorStr): Fixed a syntax error
	created in the previous code cleanup.

2003-08-19  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* win/tclWinSerial.c: Adjusted commenting and spacing usage to
	follow the principles of the Style Guide better.

2003-08-18  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/tcl.m4 (SC_ENABLE_SYMBOLS): Use test instead
	of -eq, which does not work. [Bug 781109]

2003-08-13  Chengye Mao <chengye.geo@yahoo.com>

	* win/tclWinPipe.c: fixed a bug in BuildCommandLine.